[gd_scene load_steps=4 format=3 uid="uid://bxe8byc2neki4"]

[ext_resource type="Script" path="res://Levels/end_screen.gd" id="1_rl62q"]
[ext_resource type="Script" path="res://UI/PartySummary.gd" id="2_fwrny"]
[ext_resource type="PackedScene" uid="uid://cnclpfl72ucra" path="res://UI/member_summary.tscn" id="2_uj54d"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_rl62q")

[node name="ExploreButton" type="Button" parent="."]
offset_left = 486.0
offset_top = 565.0
offset_right = 617.0
offset_bottom = 613.0
text = "Explore"

[node name="TempParty" type="Node2D" parent="."]
visible = false

[node name="PartySummary" type="Node2D" parent="."]
script = ExtResource("2_fwrny")

[node name="MemberSummary0" parent="PartySummary" instance=ExtResource("2_uj54d")]
offset_left = 102.0
offset_top = 151.0
offset_right = 267.0
offset_bottom = 408.0

[node name="MemberSummary1" parent="PartySummary" instance=ExtResource("2_uj54d")]
offset_left = 352.0
offset_top = 151.0
offset_right = 517.0
offset_bottom = 408.0

[node name="MemberSummary2" parent="PartySummary" instance=ExtResource("2_uj54d")]
offset_left = 607.0
offset_top = 152.0
offset_right = 772.0
offset_bottom = 409.0

[node name="MemberSummary3" parent="PartySummary" instance=ExtResource("2_uj54d")]
offset_left = 861.0
offset_top = 151.0
offset_right = 1026.0
offset_bottom = 408.0

[node name="LoseLabel" type="Label" parent="."]
visible = false
offset_left = 441.0
offset_top = 78.0
offset_right = 687.0
offset_bottom = 147.0
theme_override_font_sizes/font_size = 50
text = "You lose..."
horizontal_alignment = 1

[connection signal="pressed" from="ExploreButton" to="." method="_on_button_pressed"]
